--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,16 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate Properties
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Hibernate properties
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+# Format SQL queries for better readability
+hibernate.format_sql=true
+
+# Log parameter values in SQL queries (useful for debugging)
+hibernate.use_sql_comments=true
