--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,14 @@ hibernate.hbm2ddl.auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 
+# Log to file in current directory
+logging.file.path=.
+
 # Format SQL queries for better readability
 hibernate.format_sql=true
 
-# Log parameter values in SQL queries (useful for debugging)
+# Log parameter values in SQL queries
 hibernate.use_sql_comments=true
+
+
+
