--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Database properties
-spring.datasource.url=jdbc:mysql://localhost:3306/gym-service
-spring.datasource.username=root
-spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Set active profile
+spring.profiles.active=dev
 
 # Hibernate properties
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -20,6 +20,12 @@ hibernate.format_sql=true
 
 # Log parameter values in SQL queries
 hibernate.use_sql_comments=true
+
+# Actuator endpoint exposure
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
+
 
 
 
