--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,11 +37,16 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.instance.preferIpAddress=true
 
 # Resilience4j Circuit Breaker configuration for workloadService
-resilience4j.circuitbreaker.instances.workloadService.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.workloadService.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.workloadService.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.workloadService.waitDurationInOpenState=10000
-resilience4j.circuitbreaker.instances.workloadService.ringBufferSizeInClosedState=10
-resilience4j.circuitbreaker.instances.workloadService.ringBufferSizeInHalfOpenState=5
+resilience4j.circuitbreaker.instances.workloadService.registerHealthIndicator=true
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
+logging.level.io.github.resilience4j.circuitbreaker=DEBUG
+
 
 
 
